# manga_reader

./: .gitignore  Cargo.toml  holder
src/: main.rs  manga.rs  tui.rs
