[package]
name = "manga_reader"
version = "0.1.0"
authors = ["Shivansh-Potdar <loldude482@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0.104", features = ["derive"] }
cursive = { git = "https://github.com/gyscos/cursive" , features = ["crossterm-backend"] , default-features = false }
itertools = "0.8"